contrast fixed

--- a/chamber2/styles/base.css
+++ b/chamber2/styles/base.css
@@ -15,7 +15,7 @@ header {
 
 header h1 {
   margin: 0;
-  color: #f5a434;
+  color: #015f72;
   font-size: 1.5rem;
 }
 
